--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "octagonal-wheels-dev",
+    "name": "octagonal-wheels",
     "version": "0.1.1",
     "description": "This module is a compilation of wheels that have been reinvented for a specific purpose",
     "type": "module",
