--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "octagonal-wheels",
-    "version": "0.1.4",
+    "version": "0.1.2",
     "description": "This module is a compilation of wheels that have been reinvented for a specific purpose",
     "type": "module",
     "scripts": {
@@ -11,7 +11,9 @@
         "coverage": "vitest run --coverage"
     },
     "files": [
-        "dist"
+        "dist",
+        "README.md",
+        "LICENSE"
     ],
     "repository": "",
     "author": "vorotamoroz",
@@ -40,7 +42,7 @@
         "xxhash-wasm": "0.4.2",
         "xxhash-wasm-102": "npm:xxhash-wasm@^1.0.2"
     },
-    "np": {
+    "_np": {
         "contents": "dist"
     }
 }
