--- a/package.json
+++ b/package.json
@@ -20,19 +20,20 @@
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@rollup/plugin-replace": "^5.0.7",
-        "@vitest/browser": "^1.6.0",
-        "@vitest/coverage-istanbul": "^1.6.0",
-        "glob": "^10.4.2",
-        "playwright": "^1.44.1",
-        "rimraf": "^5.0.7",
-        "rollup": "^4.18.0",
+        "@vitest/browser": "^2.0.2",
+        "@vitest/coverage-istanbul": "^2.0.2",
+        "glob": "^11.0.0",
+        "playwright": "^1.45.1",
+        "puppeteer-core": "^22.11.2",
+        "rimraf": "^6.0.1",
+        "rollup": "^4.18.1",
         "rollup-plugin-node-globals": "^1.4.0",
         "rollup-plugin-polyfill-node": "^0.13.0",
         "rollup-plugin-typescript2": "^0.36.0",
-        "typescript": "^5.2.2",
-        "vite": "^5.2.0",
-        "vitest": "^1.6.0",
-        "webdriverio": "^8.39.0"
+        "typescript": "^5.5.3",
+        "vite": "^5.3.3",
+        "vitest": "^2.0.2",
+        "webdriverio": "^7.16.4"
     },
     "dependencies": {
         "idb": "^8.0.0",
