--- a/package.json
+++ b/package.json
@@ -33,11 +33,10 @@
         "typescript": "^5.6.3",
         "vite": "^5.4.10",
         "vitest": "^2.1.4",
-        "webdriverio": "^9.2.11"
+        "webdriverio": "^9.2.11",
+        "xxhash-wasm-102": "npm:xxhash-wasm@^1.0.2"
     },
     "dependencies": {
-        "idb": "^8.0.0",
-        "xxhash-wasm": "0.4.2",
-        "xxhash-wasm-102": "npm:xxhash-wasm@^1.0.2"
+        "idb": "^8.0.0"
     }
 }
