Add package (typedoc, etc.), split scripts, add exports field

--- a/package.json
+++ b/package.json
@@ -5,13 +5,170 @@
     "type": "module",
     "scripts": {
         "clean": "rimraf dist",
-        "build": "npm run clean && rollup -c && npm run copy",
-        "doc": "npx typedoc --out ./docs ./src",
+        "prebuild": "npm run clean",
+        "build": "rollup -c",
+        "postbuild": "npm run doc",
+        "generateexport": "node globDist.mjs",
+        "doc": "npx typedoc  --plugin typedoc-plugin-markdown  --out ./docs ./src",
         "dev": "rollup -c -w",
         "test": "vitest",
         "copy": "node release.js",
         "coverage": "vitest run --coverage"
     },
+    "exports": {
+        ".": "dist/index.js",
+        "./package.json": "./package.json",
+        "./string": "./dist/string.js",
+        "./string.js": "./dist/string.js",
+        "./promises": "./dist/promises.js",
+        "./promises.js": "./dist/promises.js",
+        "./object": "./dist/object.js",
+        "./object.js": "./dist/object.js",
+        "./number": "./dist/number.js",
+        "./number.js": "./dist/number.js",
+        "./function": "./dist/function.js",
+        "./function.js": "./dist/function.js",
+        "./events": "./dist/events.js",
+        "./events.js": "./dist/events.js",
+        "./context": "./dist/context.js",
+        "./context.js": "./dist/context.js",
+        "./collection": "./dist/collection.js",
+        "./collection.js": "./dist/collection.js",
+        "./actor": "./dist/actor.js",
+        "./actor.js": "./dist/actor.js",
+        "./patched_xxhash_wasm/xxhash-wasm": "./dist/patched_xxhash_wasm/xxhash-wasm.js",
+        "./patched_xxhash_wasm/xxhash-wasm.js": "./dist/patched_xxhash_wasm/xxhash-wasm.js",
+        "./messagepassing/signal_v1": "./dist/messagepassing/signal_v1.js",
+        "./messagepassing/signal_v1.js": "./dist/messagepassing/signal_v1.js",
+        "./messagepassing/signal": "./dist/messagepassing/signal.js",
+        "./messagepassing/signal.js": "./dist/messagepassing/signal.js",
+        "./messagepassing.js": "./dist/messagepassing/index.js",
+        "./messagepassing": "./dist/messagepassing/index.js",
+        "./messagepassing/index.js": "./dist/messagepassing/index.js",
+        "./memory/memutil": "./dist/memory/memutil.js",
+        "./memory/memutil.js": "./dist/memory/memutil.js",
+        "./memory/LRUCache": "./dist/memory/LRUCache.js",
+        "./memory/LRUCache.js": "./dist/memory/LRUCache.js",
+        "./memory.js": "./dist/memory/index.js",
+        "./memory": "./dist/memory/index.js",
+        "./memory/index.js": "./dist/memory/index.js",
+        "./iterable/source": "./dist/iterable/source.js",
+        "./iterable/source.js": "./dist/iterable/source.js",
+        "./iterable/map": "./dist/iterable/map.js",
+        "./iterable/map.js": "./dist/iterable/map.js",
+        "./iterable.js": "./dist/iterable/index.js",
+        "./iterable": "./dist/iterable/index.js",
+        "./iterable/index.js": "./dist/iterable/index.js",
+        "./iterable/chunks": "./dist/iterable/chunks.js",
+        "./iterable/chunks.js": "./dist/iterable/chunks.js",
+        "./hash/xxhash": "./dist/hash/xxhash.js",
+        "./hash/xxhash.js": "./dist/hash/xxhash.js",
+        "./hash/purejs": "./dist/hash/purejs.js",
+        "./hash/purejs.js": "./dist/hash/purejs.js",
+        "./hash.js": "./dist/hash/index.js",
+        "./hash": "./dist/hash/index.js",
+        "./hash/index.js": "./dist/hash/index.js",
+        "./hash/crc32": "./dist/hash/crc32.js",
+        "./hash/crc32.js": "./dist/hash/crc32.js",
+        "./encryption.js": "./dist/encryption/index.js",
+        "./encryption": "./dist/encryption/index.js",
+        "./encryption/index.js": "./dist/encryption/index.js",
+        "./encryption/encryptionv3": "./dist/encryption/encryptionv3.js",
+        "./encryption/encryptionv3.js": "./dist/encryption/encryptionv3.js",
+        "./encryption/encryption": "./dist/encryption/encryption.js",
+        "./encryption/encryption.js": "./dist/encryption/encryption.js",
+        "./dataobject/Refiner": "./dist/dataobject/Refiner.js",
+        "./dataobject/Refiner.js": "./dist/dataobject/Refiner.js",
+        "./dataobject/reactive_v2": "./dist/dataobject/reactive_v2.js",
+        "./dataobject/reactive_v2.js": "./dist/dataobject/reactive_v2.js",
+        "./dataobject/reactive_v1": "./dist/dataobject/reactive_v1.js",
+        "./dataobject/reactive_v1.js": "./dist/dataobject/reactive_v1.js",
+        "./dataobject/reactive": "./dist/dataobject/reactive.js",
+        "./dataobject/reactive.js": "./dist/dataobject/reactive.js",
+        "./dataobject/PersistentMap": "./dist/dataobject/PersistentMap.js",
+        "./dataobject/PersistentMap.js": "./dist/dataobject/PersistentMap.js",
+        "./dataobject.js": "./dist/dataobject/index.js",
+        "./dataobject": "./dist/dataobject/index.js",
+        "./dataobject/index.js": "./dist/dataobject/index.js",
+        "./databases/SimpleStoreIDB": "./dist/databases/SimpleStoreIDB.js",
+        "./databases/SimpleStoreIDB.js": "./dist/databases/SimpleStoreIDB.js",
+        "./databases/SimpleStoreBase": "./dist/databases/SimpleStoreBase.js",
+        "./databases/SimpleStoreBase.js": "./dist/databases/SimpleStoreBase.js",
+        "./databases/KeyValueDB": "./dist/databases/KeyValueDB.js",
+        "./databases/KeyValueDB.js": "./dist/databases/KeyValueDB.js",
+        "./databases.js": "./dist/databases/index.js",
+        "./databases": "./dist/databases/index.js",
+        "./databases/index.js": "./dist/databases/index.js",
+        "./conduit/regulator": "./dist/conduit/regulator.js",
+        "./conduit/regulator.js": "./dist/conduit/regulator.js",
+        "./conduit/manifold": "./dist/conduit/manifold.js",
+        "./conduit/manifold.js": "./dist/conduit/manifold.js",
+        "./conduit.js": "./dist/conduit/index.js",
+        "./conduit": "./dist/conduit/index.js",
+        "./conduit/index.js": "./dist/conduit/index.js",
+        "./conduit/connector": "./dist/conduit/connector.js",
+        "./conduit/connector.js": "./dist/conduit/connector.js",
+        "./concurrency/task": "./dist/concurrency/task.js",
+        "./concurrency/task.js": "./dist/concurrency/task.js",
+        "./concurrency/semaphore_v2": "./dist/concurrency/semaphore_v2.js",
+        "./concurrency/semaphore_v2.js": "./dist/concurrency/semaphore_v2.js",
+        "./concurrency/semaphore_v1": "./dist/concurrency/semaphore_v1.js",
+        "./concurrency/semaphore_v1.js": "./dist/concurrency/semaphore_v1.js",
+        "./concurrency/semaphore": "./dist/concurrency/semaphore.js",
+        "./concurrency/semaphore.js": "./dist/concurrency/semaphore.js",
+        "./concurrency/processor_v2": "./dist/concurrency/processor_v2.js",
+        "./concurrency/processor_v2.js": "./dist/concurrency/processor_v2.js",
+        "./concurrency/processor_v1": "./dist/concurrency/processor_v1.js",
+        "./concurrency/processor_v1.js": "./dist/concurrency/processor_v1.js",
+        "./concurrency/processor": "./dist/concurrency/processor.js",
+        "./concurrency/processor.js": "./dist/concurrency/processor.js",
+        "./concurrency/lock_v2": "./dist/concurrency/lock_v2.js",
+        "./concurrency/lock_v2.js": "./dist/concurrency/lock_v2.js",
+        "./concurrency/lock_v1": "./dist/concurrency/lock_v1.js",
+        "./concurrency/lock_v1.js": "./dist/concurrency/lock_v1.js",
+        "./concurrency/lock": "./dist/concurrency/lock.js",
+        "./concurrency/lock.js": "./dist/concurrency/lock.js",
+        "./concurrency.js": "./dist/concurrency/index.js",
+        "./concurrency": "./dist/concurrency/index.js",
+        "./concurrency/index.js": "./dist/concurrency/index.js",
+        "./common/types": "./dist/common/types.js",
+        "./common/types.js": "./dist/common/types.js",
+        "./common/polyfill": "./dist/common/polyfill.js",
+        "./common/polyfill.js": "./dist/common/polyfill.js",
+        "./common/logger": "./dist/common/logger.js",
+        "./common/logger.js": "./dist/common/logger.js",
+        "./common.js": "./dist/common/index.js",
+        "./common": "./dist/common/index.js",
+        "./common/index.js": "./dist/common/index.js",
+        "./common/const": "./dist/common/const.js",
+        "./common/const.js": "./dist/common/const.js",
+        "./bureau/SlipBoard": "./dist/bureau/SlipBoard.js",
+        "./bureau/SlipBoard.js": "./dist/bureau/SlipBoard.js",
+        "./bureau/PaceMaker": "./dist/bureau/PaceMaker.js",
+        "./bureau/PaceMaker.js": "./dist/bureau/PaceMaker.js",
+        "./bureau.js": "./dist/bureau/index.js",
+        "./bureau": "./dist/bureau/index.js",
+        "./bureau/index.js": "./dist/bureau/index.js",
+        "./bureau/Inbox": "./dist/bureau/Inbox.js",
+        "./bureau/Inbox.js": "./dist/bureau/Inbox.js",
+        "./bureau/Clerk": "./dist/bureau/Clerk.js",
+        "./bureau/Clerk.js": "./dist/bureau/Clerk.js",
+        "./binary.js": "./dist/binary/index.js",
+        "./binary": "./dist/binary/index.js",
+        "./binary/index.js": "./dist/binary/index.js",
+        "./binary/hex": "./dist/binary/hex.js",
+        "./binary/hex.js": "./dist/binary/hex.js",
+        "./binary/encodedUTF16": "./dist/binary/encodedUTF16.js",
+        "./binary/encodedUTF16.js": "./dist/binary/encodedUTF16.js",
+        "./binary/base64": "./dist/binary/base64.js",
+        "./binary/base64.js": "./dist/binary/base64.js"
+    },
+    "files": [
+        "dist/**",
+        "readme.md",
+        "LICENSE",
+        "package.json"
+    ],
     "repository": "",
     "author": "vorotamoroz",
     "license": "MIT",
@@ -20,8 +177,8 @@
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.3.0",
         "@rollup/plugin-replace": "^6.0.1",
-        "@vitest/browser": "^3.1.1",
-        "@vitest/coverage-istanbul": "^3.1.1",
+        "@vitest/browser": "^3.1.4",
+        "@vitest/coverage-istanbul": "^3.1.4",
         "glob": "^11.0.0",
         "playwright": "^1.48.2",
         "puppeteer-core": "^22.3.0",
@@ -30,9 +187,11 @@
         "rollup-plugin-node-globals": "^1.4.0",
         "rollup-plugin-polyfill-node": "^0.13.0",
         "rollup-plugin-typescript2": "^0.36.0",
+        "typedoc": "^0.28.4",
+        "typedoc-plugin-markdown": "^4.6.3",
         "typescript": "^5.7.3",
-        "vite": "^6.2.5",
-        "vitest": "^3.1.1",
+        "vite": "^6.2.7",
+        "vitest": "^3.1.4",
         "webdriverio": "^9.2.11",
         "xxhash-wasm-102": "npm:xxhash-wasm@^1.0.2"
     },
