--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         "strict": true,
         // "noUnusedLocals": true,
         // "noUnusedParameters": true,
+        "allowImportingTsExtensions": true,
         "noFallthroughCasesInSwitch": true,
         "plugins": [
             {
