--- a/package.json
+++ b/package.json
@@ -177,6 +177,7 @@
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.3.0",
         "@rollup/plugin-replace": "^6.0.1",
+        "@rollup/plugin-typescript": "^12.1.2",
         "@vitest/browser": "^3.1.4",
         "@vitest/coverage-istanbul": "^3.1.4",
         "glob": "^11.0.0",
@@ -186,7 +187,6 @@
         "rollup": "^4.25.0",
         "rollup-plugin-node-globals": "^1.4.0",
         "rollup-plugin-polyfill-node": "^0.13.0",
-        "rollup-plugin-typescript2": "^0.36.0",
         "typedoc": "^0.28.4",
         "typedoc-plugin-markdown": "^4.6.3",
         "typescript": "^5.7.3",
