Add lint, prettier

--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
         "dev": "rollup -c -w",
         "test": "vitest",
         "copy": "node release.js",
-        "coverage": "vitest run --coverage"
+        "coverage": "vitest run --coverage",
+        "lint": "eslint src",
+        "tsc-check": "tsc --noEmit",
+        "pretty": "npm run prettyNoWrite -- --write --log-level error",
+        "prettyCheck": "npm run prettyNoWrite -- --check",
+        "prettyNoWrite": "prettier --config ./.prettierrc \"src/**/*.ts\" \"src/**/*.json\" ",
+        "check": "npm run lint && npm run tsc-check"
     },
     "exports": {
         ".": "./dist/index.js",
@@ -173,15 +179,21 @@
     "author": "vorotamoroz",
     "license": "MIT",
     "devDependencies": {
+        "@eslint/compat": "^1.2.9",
+        "@eslint/eslintrc": "^3.3.1",
         "@rollup/plugin-commonjs": "^28.0.1",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.3.0",
         "@rollup/plugin-replace": "^6.0.1",
         "@rollup/plugin-typescript": "^12.1.2",
+        "@typescript-eslint/eslint-plugin": "^8.33.1",
+        "@typescript-eslint/parser": "^8.33.1",
         "@vitest/browser": "^3.1.4",
         "@vitest/coverage-istanbul": "^3.1.4",
+        "eslint-plugin-import": "^2.31.0",
         "glob": "^11.0.0",
         "playwright": "^1.48.2",
+        "prettier": "^3.5.3",
         "puppeteer-core": "^22.3.0",
         "rimraf": "^6.0.1",
         "rollup": "^4.25.0",
