Add: `encryption/openSSLCompat/CBC` - unified from `diffzip`

--- a/package.json
+++ b/package.json
@@ -76,6 +76,10 @@
         "./hash/index.js": "./dist/hash/index.js",
         "./hash/crc32": "./dist/hash/crc32.js",
         "./hash/crc32.js": "./dist/hash/crc32.js",
+        "./events/EventHub": "./dist/events/EventHub.js",
+        "./events/EventHub.js": "./dist/events/EventHub.js",
+        "./events/CustomEventTargets": "./dist/events/CustomEventTargets.js",
+        "./events/CustomEventTargets.js": "./dist/events/CustomEventTargets.js",
         "./encryption.js": "./dist/encryption/index.js",
         "./encryption": "./dist/encryption/index.js",
         "./encryption/index.js": "./dist/encryption/index.js",
@@ -105,8 +109,14 @@
         "./databases.js": "./dist/databases/index.js",
         "./databases": "./dist/databases/index.js",
         "./databases/index.js": "./dist/databases/index.js",
+        "./conduit/transporterAdapter": "./dist/conduit/transporterAdapter.js",
+        "./conduit/transporterAdapter.js": "./dist/conduit/transporterAdapter.js",
+        "./conduit/transporter": "./dist/conduit/transporter.js",
+        "./conduit/transporter.js": "./dist/conduit/transporter.js",
         "./conduit/regulator": "./dist/conduit/regulator.js",
         "./conduit/regulator.js": "./dist/conduit/regulator.js",
+        "./conduit/NamedInstance": "./dist/conduit/NamedInstance.js",
+        "./conduit/NamedInstance.js": "./dist/conduit/NamedInstance.js",
         "./conduit/manifold": "./dist/conduit/manifold.js",
         "./conduit/manifold.js": "./dist/conduit/manifold.js",
         "./conduit.js": "./dist/conduit/index.js",
