--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "tsc-check": "tsc --noEmit",
         "pretty": "npm run prettyNoWrite -- --write --log-level error",
         "prettyCheck": "npm run prettyNoWrite -- --check",
-        "prettyNoWrite": "prettier --config ./.prettierrc \"src/**/*.ts\" \"src/**/*.json\" ",
+        "prettyNoWrite": "prettier --config ./.prettierrc \"src/**/*.ts\" ",
         "check": "npm run lint && npm run tsc-check",
         "serverTest:openSSLCompat": "cd ./serverTest && tsx openSSLCompat.ts"
     },
