--- a/package.json
+++ b/package.json
@@ -677,6 +677,22 @@
             "import": "./dist/memory/memutil.js",
             "types": "./dist/memory/memutil.d.ts"
         },
+        "./memory/VolatileValueCache": {
+            "import": "./dist/memory/VolatileValueCache.js",
+            "types": "./dist/memory/VolatileValueCache.d.ts"
+        },
+        "./memory/VolatileValueCache.js": {
+            "import": "./dist/memory/VolatileValueCache.js",
+            "types": "./dist/memory/VolatileValueCache.d.ts"
+        },
+        "./memory/weakMemo": {
+            "import": "./dist/memory/weakMemo.js",
+            "types": "./dist/memory/weakMemo.d.ts"
+        },
+        "./memory/weakMemo.js": {
+            "import": "./dist/memory/weakMemo.js",
+            "types": "./dist/memory/weakMemo.d.ts"
+        },
         "./messagepassing": {
             "import": "./dist/messagepassing/index.js",
             "types": "./dist/messagepassing/index.d.ts"
@@ -748,15 +764,15 @@
     "author": "vorotamoroz",
     "license": "MIT",
     "devDependencies": {
-        "@eslint/compat": "^1.2.9",
+        "@eslint/compat": "^1.3.2",
         "@eslint/eslintrc": "^3.3.1",
         "@rollup/plugin-commonjs": "^28.0.1",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.3.0",
-        "@rollup/plugin-replace": "^6.0.1",
-        "@rollup/plugin-typescript": "^12.1.2",
-        "@typescript-eslint/eslint-plugin": "^8.33.1",
-        "@typescript-eslint/parser": "^8.33.1",
+        "@rollup/plugin-replace": "^6.0.2",
+        "@rollup/plugin-typescript": "^12.1.4",
+        "@typescript-eslint/eslint-plugin": "^8.41.0",
+        "@typescript-eslint/parser": "^8.41.0",
         "@vitest/browser": "^3.1.4",
         "@vitest/coverage-istanbul": "^3.1.4",
         "eslint-plugin-import": "^2.31.0",
@@ -768,10 +784,10 @@
         "rollup": "^4.25.0",
         "rollup-plugin-node-globals": "^1.4.0",
         "rollup-plugin-polyfill-node": "^0.13.0",
-        "tsx": "^4.19.4",
-        "typedoc": "^0.28.4",
-        "typedoc-plugin-markdown": "^4.6.3",
-        "typescript": "^5.7.3",
+        "tsx": "^4.20.5",
+        "typedoc": "^0.28.11",
+        "typedoc-plugin-markdown": "^4.8.1",
+        "typescript": "^5.9.2",
         "vite": "^6.2.7",
         "vitest": "^3.1.4",
         "webdriverio": "^9.2.11",
