--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "octagonal-wheels",
-    "version": "0.1.41",
+    "version": "0.1.42",
     "description": "This module is a compilation of wheels that have been reinvented for a specific purpose",
     "type": "module",
     "types": "./dist/index.d.ts",
@@ -224,6 +224,14 @@
         "./concurrency.js": {
             "import": "./dist/concurrency/index.js",
             "types": "./dist/concurrency/index.d.ts"
+        },
+        "./concurrency/bulk": {
+            "import": "./dist/concurrency/bulk.js",
+            "types": "./dist/concurrency/bulk.d.ts"
+        },
+        "./concurrency/bulk.js": {
+            "import": "./dist/concurrency/bulk.js",
+            "types": "./dist/concurrency/bulk.d.ts"
         },
         "./concurrency/index.js": {
             "import": "./dist/concurrency/index.js",
